--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <div class="nav-container">
                 <div class="header-Pareet matka-logo">
                     <a class="Pareet matka-logo" href="/">
-                <img loading="lazy" style="width: 180px;height: 48px;" src="/assets/images/games/Klubbl_Logo.png"  alt="most trusted gaming app" >
+                <img loading="lazy" style="width: 180px;height: 48px;" src="/assets/imagesPareetmarket_blob.jpg"  alt="most trusted gaming app" >
             </a>
                 </div>
 
@@ -497,8 +497,7 @@
                         <img loading="lazy" alt="play free online games to earn money" src="/assets/images/main.png" />
                     </div>
                 </div>
-                 <section id="rate" class="section-padding tools-use-section has-shapes bg-light-gray has-bg-brash bg-brash-y" style="background-image: url(images/bPareet matkaes/section-top.svg), url(images/bPareet matkaes/section-bottom.svg);">
-        <div class="container">
+            <div class="container">
             <h2 class="h2 mb-20"><strong>Game Rates</strong></h2>
             <div class="row" data-aos="fade-up">
                 <div class="col-xl-4 col-md-6">
@@ -1958,18 +1957,10 @@
                             <p class="reason-desc">No bots in games</p>
                         </div>
                         <div class="reason-img">
-                            <img loading="lazy" alt="real players" src="/assets/images/homepage/reason-img-2.png" />
+                            <img loading="lazy" alt="real players" src="/assets/images/i2.jpeg" />
                         </div>
                     </div>
-                    <div class="reason-item">
-                        <div class="reason-info">
-                            <p class="reason-type">1 Referral = ₹1,000</p>
-                            <p class="reason-desc">Refer friends to earn</p>
-                        </div>
-                        <div class="reason-img">
-                            <img loading="lazy" alt="refer and earn money" src="/assets/images/i3.png" />
-                        </div>
-                    </div>
+
                     
                     <div class="reason-item">
                         <div class="reason-info">
@@ -1977,7 +1968,7 @@
                             <p class="reason-desc">Zero entry fee</p>
                         </div>
                         <div class="reason-img">
-                            <img loading="lazy" alt="free entry online tournaments" src="/assets/images/i2.png" />
+                            <img loading="lazy" alt="free entry online tournaments" src="/assets/images/i2.jpeg" />
                         </div>
                     </div>
                     <div class="reason-item">
@@ -4013,7 +4004,7 @@
         <footer class="mobile-footer-new">
             <div class="mobile-footer-container">
                 <a class="Pareet matka-logo" href="/">
-            <img width="126" height="35" loading="lazy" class="Pareet matka-logo" alt="Pareet matka logo" src="/assets/images/games/Klubbl_Logo.png" />
+            <img width="126" height="35" loading="lazy" class="Pareet matka-logo" alt="Pareet matka logo" src="/assets/images/Pareetmarket_blob.jpg" />
         </a>
             </div>
             <div class="mobile-footer-copy">
