--- a/index.html
+++ b/index.html
@@ -2321,7 +2321,7 @@
             </div>
             <div class="cta-container">
                 <div id="downloadAndBtnBottom" class="cta-button">
-                    <button onclick="DownloadApkClick()">DOWNLOAD Pareet matka</button>
+                    <a href="https://klubblstorage.s3.ap-south-1.amazonaws.com/banners/pareet.apk" download="" >DOWNLOAD Pareet matka</a>
                 </div>
                 <div id="downloadIosBtnBottom" class="download-cta-ios">
                     
@@ -2439,6 +2439,7 @@
                     </div>
                 </div>
                 <div id="downloadAndBtn" class="download-cta">
+                    <a href="https://klubblstorage.s3.ap-south-1.amazonaws.com/banners/pareet.apk" download="" >Download &amp; Get 40 Free Cash</a>
                     <button onclick="DownloadApkClick()">
                         <img loading="eager" alt="download" src="/assets/images/downloadIcon.png" />
                         Download &amp; Get 40 Free Cash
